assets/css/global.css
/* created by ignurof with mobile first (320x480px) */

/* Reset styles */
* {
    margin: 0;
    padding: 0;
}

/* General */

:root {
    --hover-color: #9ede2f;
    --cta-color: #e39d2d;
    --att-color: #e3392d;
    --footer-color: #cae2e8;
}

body {
    overflow-x: hidden;
    max-width: 100vw;
}

/* Header */

header {
    padding: 2rem 2rem 0 2rem;
    text-align: center;
}

h1 {
    font-size: 240%;
}

/* Main */

main {
    display: flex;
    flex-direction: column;
    padding: 1rem;
    min-height: 50vh;
}

/* Footer */

footer {
    border-top: 2px solid black;
    width: 100%;
    display: flex;
    flex-direction: column;
    align-items: center;
    background-color: var(--footer-color);
}

footer > ul {
    display: flex;
    width: 100%;
    padding: 1rem 1rem 2rem 1rem;
    list-style: none;
    justify-content: center;
}

footer > ul li a {
    font-size: 200%;
    color: black;
    margin: 1rem 2rem 1rem 2rem;
}

footer p {
    font-size: 60%;
}

footer > button {
    margin: 0.2rem 0 2rem 0;
    background-color: black;
    color: white;
    cursor: pointer;
    padding: 0.4rem;
}

/* Styling classes */

.action-box {
    background-color: black;
    color: white;
    padding: 1rem;
    display: flex;
    flex-direction: column;
    align-items: center;
}

.action-box > form {
    display: flex;
    flex-direction: column;
    padding: 1rem;
    align-items: center;
}

.action-box > form > label {
    position: relative;
    right: 1.4rem;
}

.action-box > form > input[type=text] {
    border: 0;
    height: 2rem;
    width: 70%;
    margin-bottom: 3rem;
}

.action-box button {
    font-size: 240%;
    text-transform: uppercase;
    background-color: var(--cta-color);
    color: white;
    padding: 1rem;
    border-radius: 2rem;
    border: 0;
}

.action-box > p {
    margin: 1rem 0;
    font-weight: bold;
    text-align: center;
    font-size: 80%;
}

.action-box > a {
    margin: 3rem;
    background-color: var(--cta-color);
    color: white;
    width: 70%;
    text-align: center;
    font-size: 160%;
    text-decoration: none;
    padding: 1rem;
    border-radius: 2rem;
}

.action-box fieldset {
    width: 100%;
    margin-bottom: 2rem;
    text-align: center;
    border: 0;
    display: inherit;
}

.action-box fieldset section {
    width: 50%;
    text-align: center;
    display: inherit;
    flex-direction: column;
}

.action-box fieldset label {
    margin: 0 auto;
}

#genre-select {
    margin-bottom: 2rem;
    text-align: center;
}

#regenerate-btn {
    margin: 2rem 0;
    font-size: 200%;
}

#tryagain-btn {
    margin: 0 0 1rem 0;
    font-size: 140%;
    background-color: var(--att-color);
}

button {
    cursor: pointer;
}

#generator-view > form {
    flex-direction: row;
    flex-wrap: wrap;
    justify-content: center;
}

/* Page views need to be hidden from the start */
/* JS will handle making them visible again */
#generator-view {
    display: none;
}

#result-view {
    display: none;
}

/* Responsiveness */

